# SoftwareQuality-Seminar

./: README.md
field_study_scraper/: .gitignore  README.md  collect_data.py  github_api.py  jupyter_tests.ipynb  pyproject.toml  repository_scanner.py  repository_search.py  runner.py  scan_for_dependency.py
field_study_scraper/commit_scanners/: __init__.py  configuration_file_scanner.py  guice_injection_scanner.py  injection_scanner.py  profiling_scanner.py  reflection_scanner.py
field_study_scraper/configfile_data/: config_file_scan_0.csv  config_file_scan_12.csv  config_file_scan_13.csv  config_file_scan_15.csv  config_file_scan_17.csv  config_file_scan_18.csv  config_file_scan_19.csv  config_file_scan_20.csv  config_file_scan_22.csv  config_file_scan_26.csv  config_file_scan_27.csv  config_file_scan_29.csv  config_file_scan_3.csv  config_file_scan_30.csv  config_file_scan_33.csv  config_file_scan_34.csv  config_file_scan_35.csv  config_file_scan_38.csv  config_file_scan_39.csv  config_file_scan_4.csv  config_file_scan_40.csv  config_file_scan_41.csv  config_file_scan_42.csv  config_file_scan_43.csv  config_file_scan_45.csv  config_file_scan_47.csv  config_file_scan_48.csv  config_file_scan_52.csv  config_file_scan_54.csv  config_file_scan_55.csv  config_file_scan_56.csv  config_file_scan_57.csv  config_file_scan_58.csv  config_file_scan_59.csv  config_file_scan_6.csv  config_file_scan_60.csv  config_file_scan_61.csv  config_file_scan_63.csv  config_file_scan_64.csv  config_file_scan_66.csv  (+31 more)
field_study_scraper/final_data/: collected_data.md
paper/: .gitignore  (+4 more)
(+271 files in other folders)
